--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/router": "^4.2.4",
     "@nguniversal/express-engine": "^1.0.0-beta.3",
     "@nguniversal/module-map-ngfactory-loader": "^1.0.0-beta.3",
+    "compression": "^1.7.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
